# du

./: CMakeLists.txt  main.cc  run.mac  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScorerRun.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  ScorerRun.cc
